--- a/src/main/resources/Layout.fxml
+++ b/src/main/resources/Layout.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.shape.*?>
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
       prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.nekolr.view.controller.MainController">
+      fx:controller="com.nekolr.view.controller.MainViewController">
     <children>
         <Pane prefHeight="400.0" prefWidth="600.0">
             <children>
